--- a/flipt/features.yml
+++ b/flipt/features.yml
@@ -1,91 +1,67 @@
 version: "1.2"
 namespace: default
 
-# Feature Flags Configuration
-# This file is synced to Flipt via GitHub
-# Edit this file and commit to update flags
+# Feature Flags Configuration for Flipt v2
+# This file is automatically synced to Flipt via GitHub using git storage backend
+# 
+# Git Sync Configuration:
+# - Repository: https://github.com/dev-alxv/openfeature-flipt-angular.git
+# - Branch: main
+# - Poll Interval: 30s (checks for changes every 30 seconds)
+# - Fetch Policy: strict (validates all changes before applying)
+# - Storage Backend: in-memory with remote git sync
+#
+# To update flags:
+# 1. Edit this file in the git repository
+# 2. Commit and push to the main branch
+# 3. Flipt will automatically detect and sync changes within 30 seconds
+# 4. Angular app will reflect updated flag values on next evaluation
 
 flags:
   - key: newHomeUI
-    name: New Home UI
-    type: VARIANT_FLAG_TYPE
-    description: Enable new home page design
-    enabled: true
-    variants:
-      - key: enabled
-        name: Enabled
-      - key: disabled
-        name: Disabled
-    rules:
-      - segment: premium-users
-        distributions:
-          - variant_key: enabled
-            rollout: 100
-      - segment: enterprise-users
-        distributions:
-          - variant_key: enabled
-            rollout: 100
-
-  - key: oldFeatureA
-    name: Old Feature A
+    name: newHomeUI
     type: BOOLEAN_FLAG_TYPE
-    description: Legacy feature A (scheduled for deprecation)
+    description: ""
     enabled: false
 
   - key: oldFeatureB
-    name: Old Feature B
+    name: oldFeatureB
     type: BOOLEAN_FLAG_TYPE
-    description: Legacy feature B (scheduled for deprecation)
+    description: ""
     enabled: false
 
+  - key: oldFeatureA
+    name: oldFeatureA
+    type: BOOLEAN_FLAG_TYPE
+    description: ""
+    enabled: false
+    metadata:
+      userId: client-1
+
   - key: newRevenueChart
-    name: New Revenue Chart
-    type: VARIANT_FLAG_TYPE
-    description: Enable new revenue chart visualization
-    enabled: true
-    variants:
-      - key: enabled
-        name: Enabled
-      - key: disabled
-        name: Disabled
-    rules:
-      - segment: premium-users
-        distributions:
-          - variant_key: enabled
-            rollout: 50
-      - segment: enterprise-users
-        distributions:
-          - variant_key: enabled
-            rollout: 100
+    name: newRevenueChart
+    type: BOOLEAN_FLAG_TYPE
+    description: ""
+    enabled: false
 
 # Segments for targeting
 segments:
-  - key: premium-users
-    name: Premium Users
-    description: Users with premium plan
-    match_type: ANY_MATCH_TYPE
+  - key: client-1
+    name: client-1
+    description: ""
+    match_type: ALL_MATCH_TYPE
     constraints:
       - type: STRING_COMPARISON_TYPE
-        property: plan
+        property: entityId
         operator: eq
-        value: premium
+        value: client-1
 
-  - key: enterprise-users
-    name: Enterprise Users
-    description: Users with enterprise plan
-    match_type: ANY_MATCH_TYPE
+  - key: client-2
+    name: client-2
+    description: ""
+    match_type: ALL_MATCH_TYPE
     constraints:
       - type: STRING_COMPARISON_TYPE
-        property: plan
+        property: entityId
         operator: eq
-        value: enterprise
-
-  - key: beta-testers
-    name: Beta Testers
-    description: Users in beta testing program
-    match_type: ANY_MATCH_TYPE
-    constraints:
-      - type: STRING_COMPARISON_TYPE
-        property: betaTester
-        operator: eq
-        value: "true"
+        value: client-2
