--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   flipt-github:
     image: ghcr.io/flipt-io/flipt:v2.5.0
     container_name: flipt-github
-    command: ["/flipt", "--config", "/etc/flipt/config/flipt.yml"]
     ports:
       - "8080:8080"
     environment:
       - GIT_USERNAME=${GIT_USERNAME}
       - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - FLIPT_CONFIG_FILE=/etc/flipt/config/flipt.yml
     volumes:
       - ./flipt:/etc/flipt/config:ro
     restart: unless-stopped
