feat: finalize Flipt v2 with PostgreSQL backend for rules and metadata support
- Upgrade to Flipt v2.5.0 with full rules and metadata support
- Add PostgreSQL database for persistent flag storage
- Update docker-compose with postgres service
- Update flipt.yml for v2 configuration
- Feature flags ready for manual UI import or API setup
- Supports rules arrays and metadata sections as configured
- Add .env.example template (never commit actual .env)

--- a/flipt/features.yml
+++ b/flipt/features.yml
@@ -23,24 +23,45 @@ flags:
     type: BOOLEAN_FLAG_TYPE
     description: ""
     enabled: false
+    rules:
+      - rank: 1
+        segment: client-1
+        value: false
+      - rank: 2
+        segment: client-2
+        value: false
 
   - key: oldFeatureB
     name: oldFeatureB
     type: BOOLEAN_FLAG_TYPE
     description: ""
     enabled: false
+    rules:
+      - rank: 1
+        segment: client-2
+        value: false
 
   - key: oldFeatureA
     name: oldFeatureA
     type: BOOLEAN_FLAG_TYPE
     description: ""
     enabled: false
+    metadata:
+      userId: client-1
+    rules:
+      - rank: 1
+        segment: client-1
+        value: true
 
   - key: newRevenueChart
     name: newRevenueChart
     type: BOOLEAN_FLAG_TYPE
     description: ""
     enabled: false
+    rules:
+      - rank: 1
+        segment: client-1
+        value: false
 
 # Segments for targeting
 segments:
