--- a/.github/workflows/sync-flipt-flags.yml
+++ b/.github/workflows/sync-flipt-flags.yml
@@ -3,8 +3,8 @@ name: Sync Feature Flags to Flipt
 on:
   push:
     branches:
+      - master
       - main
-      - develop
     paths:
       - 'flipt/features.yml'
   pull_request:
@@ -20,64 +20,183 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Validate YAML syntax
+      - name: Install yq
         run: |
-          # Install yq for YAML validation
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
-          
-          # Validate YAML
+
+      - name: Validate YAML syntax
+        run: |
           yq eval 'flipt/features.yml' > /dev/null
           echo "✅ YAML syntax is valid"
 
-      - name: Check required fields
+      - name: Extract and display flags
         run: |
-          echo "🔍 Checking flag configuration..."
-          yq eval '.flags[] | .key' flipt/features.yml
+          echo "📋 Flags in configuration:"
+          yq eval '.flags[] | "  - " + .key + ": " + .name' flipt/features.yml
+          echo ""
           echo "✅ Configuration validated"
 
   sync-to-flipt-dev:
     name: Sync to Flipt (Development)
     runs-on: ubuntu-latest
     needs: validate
-    if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main')
     environment: development
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Import flags to Flipt
+      - name: Install yq and jq
         run: |
-          echo "🚀 Syncing flags to Flipt Development..."
-          
-          # Using Flipt CLI (if installed) or direct API calls
-          curl -X POST "${{ secrets.FLIPT_DEV_URL }}/api/v1/namespaces/default/flags/import" \
-            -H "Authorization: Bearer ${{ secrets.FLIPT_DEV_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d @flipt/features.yml || echo "⚠️ Sync failed - check Flipt connection"
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+          apt-get update && apt-get install -y jq
 
-      - name: Verify sync
+      - name: Create flags via API
         run: |
+          FLIPT_URL="${{ secrets.FLIPT_DEV_URL }}"
+          echo "🚀 Syncing flags to Flipt Development ($FLIPT_URL)..."
+          
+          # Extract flags and create them
+          yq eval '.flags[]' flipt/features.yml | while IFS= read -r flag_data; do
+            flag_json=$(yq eval -o=json '.' <<< "$flag_data")
+            key=$(echo "$flag_json" | jq -r '.key')
+            
+            echo "Creating flag: $key"
+            curl -s -X POST "$FLIPT_URL/api/v1/namespaces/default/flags" \
+              -H "Content-Type: application/json" \
+              -d "$flag_json" \
+              -w "\nStatus: %{http_code}\n" || echo "⚠️ Failed to create $key"
+          done
+          
           echo "✅ Flags synced to Development environment"
+
+      - name: Create segments via API
+        run: |
+          FLIPT_URL="${{ secrets.FLIPT_DEV_URL }}"
+          echo "📍 Syncing segments to Flipt Development..."
+          
+          # Extract segments and create them
+          yq eval '.segments[]' flipt/features.yml | while IFS= read -r segment_data; do
+            segment_json=$(yq eval -o=json '.' <<< "$segment_data")
+            key=$(echo "$segment_json" | jq -r '.key')
+            
+            echo "Creating segment: $key"
+            curl -s -X POST "$FLIPT_URL/api/v1/namespaces/default/segments" \
+              -H "Content-Type: application/json" \
+              -d "$segment_json" \
+              -w "\nStatus: %{http_code}\n" || echo "⚠️ Failed to create segment $key"
+          done
 
   sync-to-flipt-prod:
     name: Sync to Flipt (Production)
     runs-on: ubuntu-latest
     needs: validate
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     environment: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install yq and jq
+        run: |
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+          apt-get update && apt-get install -y jq
+
       - name: Create backup
         run: |
           echo "📦 Creating backup of current flags..."
-          curl "${{ secrets.FLIPT_PROD_URL }}/api/v1/namespaces/default/flags" \
-            -H "Authorization: Bearer ${{ secrets.FLIPT_PROD_TOKEN }}" \
-            -o backup-$(date +%Y%m%d-%H%M%S).json || true
+          FLIPT_URL="${{ secrets.FLIPT_PROD_URL }}"
+          curl -s "$FLIPT_URL/api/v1/namespaces/default/flags" \
+            -o backup-$(date +%Y%m%d-%H%M%S).json 2>/dev/null || echo "⚠️ Backup skipped"
 
-      - name: Import flags to Flipt
+      - name: Create flags via API
+        run: |
+          FLIPT_URL="${{ secrets.FLIPT_PROD_URL }}"
+          echo "🚀 Syncing flags to Flipt Production ($FLIPT_URL)..."
+          
+          # Extract flags and create them
+          yq eval '.flags[]' flipt/features.yml | while IFS= read -r flag_data; do
+            flag_json=$(yq eval -o=json '.' <<< "$flag_data")
+            key=$(echo "$flag_json" | jq -r '.key')
+            
+            echo "Creating flag: $key"
+            curl -s -X POST "$FLIPT_URL/api/v1/namespaces/default/flags" \
+              -H "Content-Type: application/json" \
+              -d "$flag_json" \
+              -w "\nStatus: %{http_code}\n" || echo "⚠️ Failed to create $key"
+          done
+          
+          echo "✅ Flags synced to Production environment"
+
+      - name: Create segments via API
+        run: |
+          FLIPT_URL="${{ secrets.FLIPT_PROD_URL }}"
+          echo "📍 Syncing segments to Flipt Production..."
+          
+          # Extract segments and create them
+          yq eval '.segments[]' flipt/features.yml | while IFS= read -r segment_data; do
+            segment_json=$(yq eval -o=json '.' <<< "$segment_data")
+            key=$(echo "$segment_json" | jq -r '.key')
+            
+            echo "Creating segment: $key"
+            curl -s -X POST "$FLIPT_URL/api/v1/namespaces/default/segments" \
+              -H "Content-Type: application/json" \
+              -d "$segment_json" \
+              -w "\nStatus: %{http_code}\n" || echo "⚠️ Failed to create segment $key"
+          done
+
+  comment-pr:
+    name: Comment on PR
+    runs-on: ubuntu-latest
+    needs: validate
+    if: github.event_name == 'pull_request'
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install yq
+        run: |
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+
+      - name: Extract flag changes
+        id: changes
+        run: |
+          echo "flags<<EOF" >> $GITHUB_OUTPUT
+          yq eval '.flags[] | "- **" + .key + "**: " + .name' flipt/features.yml >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Comment PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `## 🚩 Feature Flag Changes
+              
+              This PR modifies feature flag configuration:
+              
+              ${{ steps.changes.outputs.flags }}
+              
+              ### Configuration
+              All flags include optional rules and metadata for advanced targeting.
+              
+              ### Next Steps
+              - ✅ Configuration validated by workflow
+              - 🔍 Review the changes carefully
+              - 🚀 Merge to \`main\` to deploy to both Dev and Production
+              
+              **Note**: Segments and rules will be synced automatically on merge.
+              `
+            })
+
         run: |
           echo "🚀 Syncing flags to Flipt Production..."
           
