fix: enable newHomeUI flag for client-1

--- a/flipt/features.yml
+++ b/flipt/features.yml
@@ -26,7 +26,7 @@ flags:
     rules:
       - rank: 1
         segment: client-1
-        value: false
+        value: true
       - rank: 2
         segment: client-2
         value: false
