create flag default/test2

--- a/staging/default/features.yaml
+++ b/staging/default/features.yaml
@@ -7,3 +7,7 @@ flags:
       name: Test-github-connection
       type: BOOLEAN_FLAG_TYPE
       enabled: false
+    - key: test2
+      name: test2
+      type: BOOLEAN_FLAG_TYPE
+      enabled: false
