update flag default/newHomeUI

--- a/staging/default/features.yaml
+++ b/staging/default/features.yaml
@@ -12,6 +12,7 @@ flags:
             keys:
                 - client-1
             operator: OR_SEGMENT_OPERATOR
+            value: true
         - segment:
             keys:
                 - client-2
