update flag default/oldFeatureA

--- a/staging/default/features.yaml
+++ b/staging/default/features.yaml
@@ -31,11 +31,12 @@ flags:
       enabled: false
       metadata:
         userId: client-1
-      rules:
+      rollouts:
         - segment:
             keys:
                 - client-1
-          rank: 1
+            operator: OR_SEGMENT_OPERATOR
+            value: true
     - key: newRevenueChart
       name: newRevenueChart
       type: BOOLEAN_FLAG_TYPE
